--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: Budgy_development
+  database: <%= ENV.fetch("DB_NAME") { ror_budget } %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: Budgy
+  username: <%= ENV.fetch("DB_USER") { ror_budget } %>
 
   # The password associated with the postgres role (username).
-  #password:
+  password: <%= ENV.fetch("DB_PASSWORD") { "" } %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: <%= ENV.fetch("DB_HOST") { localhost } %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: <%= ENV.fetch("DB_PORT") { 5432 } %>
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Budgy_test
+  database: <%= ENV.fetch("DB_NAME") { ror_budget } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: Budgy_production
-  username: Budgy
-  password: <%= ENV["Budgy_DATABASE_PASSWORD"] %>
+  database: <%= ENV.fetch("DB_NAME") { ror_budget } %>
+  username: <%= ENV.fetch("DB_USER") { ror_budget } %>
+  password: <%= ENV["DB_PASSWORD"] %>
